[CI] Skip installation of hidet dependency to speedup format and lint

--- a/.github/workflows/format-and-lint.yaml
+++ b/.github/workflows/format-and-lint.yaml
@@ -27,7 +27,7 @@ jobs:
           # todo: make tilus depends on public hidet repository in the future
           git clone https://${{ secrets.CENTML_HIDET_ACCESS }}@github.com/CentML/hidet.git
           cd hidet; mkdir build; cd build; cmake ..; make -j4; cd ..; cd ..;
-          cd hidet; pip install .
+          cd hidet; pip install --no-deps .
 
       - name: Install the dev dependencies
         run: |
