[Linter] Enable check-untyped-defs flag of mypy

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,6 +61,9 @@ convention = "numpy"
 [tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401"]
 
+[tool.mypy]
+check_untyped_defs = true
+
 [[tool.mypy.overrides]]
 module = ["tilus.*"]
 disable_error_code = [
