[Linter] Enable mypy disallow incomplete defs

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,6 +63,7 @@ convention = "numpy"
 
 [tool.mypy]
 check_untyped_defs = true
+disallow_incomplete_defs = true
 
 [[tool.mypy.overrides]]
 module = ["tilus.*"]
