[IR][GlobalTensor] Introduce GlobalTensor in the Tilus IR
1. Introduce `GlobalTensor` as a tensor in global memory. Also added
`GlobalLayout` as its layout.
2. Rename the orginal `LoadGlobal` and `StoreGlobal` instructions to
`LoadGlobalGeneric` and `StoreGlobalGeneric`.
3. Introduce new `LoadGlobal` and `StoreGlobal`.
4. Add a pass to lower the `LoadGlobal` and `StoreGlobal` to
`LoadGlobalGeneric` and `StoreGlobalGeneric`.
5. Add `isort` ruleset to ruff to format & lint the import statements.
6. Refactor the manipulation of scalar values from Instruction level to
Statement level.
7. Allow multiple categories in the PR title.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,7 @@ line-length = 120
 # Add the `line-too-long` rule to the enforced rule set.
 extend-select = [
 #    "D", # enforce docstring conventions
+    "I", # isort rules that unify the import order
 ]
 
 [tool.ruff.lint.pydocstyle]
