[Examples] Add examples to the lint script and ci
1. update the format and lint scripts to also work on directory
`./examples`.
2. update the workflow to also run each python script under this
directory.

--- a/.github/workflows/tests-temporary.yaml
+++ b/.github/workflows/tests-temporary.yaml
@@ -38,3 +38,6 @@ jobs:
 
       - name: Run tests
         run: pytest ./tests
+
+      - name: Run examples
+        run: bash .github/workflows/scripts/run-examples.sh
