--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ dev = [
     "mypy==1.15.0",
     "pytest",
     "types-tabulate",
+    "types-tqdm",
     "pandas",
 ]
 
@@ -67,6 +68,8 @@ convention = "numpy"
 [tool.mypy]
 check_untyped_defs = true
 disallow_incomplete_defs = true
+allow_redefinition = true
+strict_optional = false
 
 [[tool.mypy.overrides]]
 module = ["tilus.*"]
