--- a/.github/workflows/format-and-lint.yaml
+++ b/.github/workflows/format-and-lint.yaml
@@ -14,24 +14,15 @@ jobs:
     if: github.repository == 'hidet-org/tilus'
     runs-on: ubuntu-latest
     steps:
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Install Hidet
-        uses: ./.github/actions/install-hidet
+      - name: Setup and Install Tilus
+        id: setup-and-install
+        uses: ./.github/actions/setup-environment
         with:
+          python-version: '3.10'
           hidet-access-token: ${{ secrets.CENTML_HIDET_ACCESS }}
-
-      - name: Install Tilus
-        id: install-tilus
-        uses: ./.github/actions/install-tilus
-        with:
-          package-path: "."
 
       - name: Check format and lint
         run: |
