[Example] Optimize the attention operator by spliting the sequence of kv
This PR adds the third implementation that supports splitting the
sequence length of kv tensors and distribute to different thread blocks.

```txt
     batch_size seqlen num_heads head_size num_heads_kv latency (ms)                gflops            
name                                                      flash-attn     tilus  flash-attn       tilus
0             1    512        32       128            8     0.045056  0.044032   47.662545   48.770977
2             1   1024        32       128            8     0.109568  0.102368   78.398206   83.912305
4             1   2048        32       128            8     0.331264  0.318464  103.723132  107.892061
6             1   4096        32       128            8     1.146880  1.119232  119.837254  122.797549
8             1   8192        32       128            8     4.248960  4.206288  129.385970  130.698564
1             1    512        64       128            8     0.064512  0.064512   66.576254   66.576254
3             1   1024        64       128            8     0.175728  0.180224   97.763982   95.325090
5             1   2048        64       128            8     0.588816  0.600064  116.707893  114.520250
7             1   4096        64       128            8     2.153984  2.188800  127.613721  125.583840
9             1   8192        64       128            8     8.235936  8.397824  133.501726  130.928154
```
(on RTX 4090, lock to TDP clock).

Other changes to make this happen:
1. Add Return statement
2. Fix a bug in scalar analyzer
3. Fix bugs in creating Squeeze/UnsqueezeInst without layout
4. Add a default layout inference rule for LoadSharedInst
5. Add layout inference rules for Squeeze/UnsqueezeInst
6. Add a tool script to lock the GPU clock.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ dev = [
     "types-tabulate",
     "types-tqdm",
     "pandas",
+    "nvidia-ml-py",  # for locking GPU clocks
 ]
 
 [project.urls]
