[Docs] Add the documentation for naive matmul
This PR adds the documentation of naive matmul in tilus, demostrating
how to define kernels in tilus.

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,13 @@ Thumbs.db
 **/sanitizer-reports/
 **/nsys-reports/
 **/ncu-reports/
+
+
+# python cProfile result
+*.prof
+*.pclprof
+
+# sphinx generated
+**/generated/
+**/sg_execution_times.rst
+docs/source/getting-started/matmul/
