--- a/.github/actions/setup-environment/action.yaml
+++ b/.github/actions/setup-environment/action.yaml
@@ -15,6 +15,10 @@ outputs:
 runs:
   using: composite
   steps:
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+      with:
+        buildkitd-config: /etc/buildkit/buildkitd.toml
     - name: Install git and cmake
       run: |
         # Define a function to check and install packages safely
@@ -40,6 +44,9 @@ runs:
       uses: actions/setup-python@v4
       with:
         python-version: ${{ inputs.python-version }}
+    
+    - name: Setup proxy cache
+      uses: nv-gha-runners/setup-proxy-cache@main
 
     - name: Install Tilus
       id: install-tilus  # Preserve the ID for output
