--- a/.github/workflows/deploy-docs.yaml
+++ b/.github/workflows/deploy-docs.yaml
@@ -1,8 +1,7 @@
-name: Deploy Docs
+name: Build and Deploy Docs
 
 on:
-  push:
-    branches: [main]
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.sha }}
@@ -17,7 +16,7 @@ jobs:
   build:
     if: github.repository == 'NVIDIA/tilus'
     continue-on-error: true
-    runs-on: yaoyao-centml
+    runs-on: linux-amd64-gpu-l4-latest-1
     container:
       image: nvidia/cuda:12.6.2-devel-ubuntu22.04
       options: --gpus all
