fix file changes detection

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -30,6 +30,7 @@ jobs:
           files: |
             tests/**
             python/**
+          since_last_remote_commit: false
 
       - name: Check for changes in examples
         id: changed-examples
@@ -38,6 +39,7 @@ jobs:
           files: |
             python/**
             examples/**
+          since_last_remote_commit: false
         
       - name: Check for changes in docs
         id: changed-docs
@@ -46,6 +48,7 @@ jobs:
           files: |
             python/**
             docs/**
+          since_last_remote_commit: false
 
   tests:
     needs: check-changes
