--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -30,6 +30,7 @@ jobs:
           files: |
             tests/**
             python/**
+          sha: 'main'
 
       - name: Check for changes in examples
         id: changed-examples
@@ -38,6 +39,7 @@ jobs:
           files: |
             python/**
             examples/**
+          sha: 'main'
         
       - name: Check for changes in docs
         id: changed-docs
@@ -46,6 +48,7 @@ jobs:
           files: |
             python/**
             docs/**
+          sha: 'main'
 
   tests:
     needs: check-changes
@@ -75,7 +78,10 @@ jobs:
   docs:
     needs: check-changes
     if: github.repository == 'NVIDIA/tilus' && needs.check-changes.outputs.should_run_docs == 'true'
-    runs-on: ubuntu-latest
+    runs-on: linux-amd64-gpu-l4-latest-1
+    container:
+      image: nvidia/cuda:12.6.2-devel-ubuntu22.04
+      options: --gpus all
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -94,7 +100,10 @@ jobs:
   examples:
     needs: check-changes
     if: github.repository == 'NVIDIA/tilus' && needs.check-changes.outputs.should_run_examples == 'true'
-    runs-on: ubuntu-latest
+    runs-on: linux-amd64-gpu-l4-latest-1
+    container:
+      image: nvidia/cuda:12.6.2-devel-ubuntu22.04
+      options: --gpus all
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
