--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -20,8 +20,6 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
       - name: Check for changes in test-relevant directories
         id: changed-tests
@@ -60,7 +58,7 @@ jobs:
           - linux-amd64-gpu-l4-latest-1
     runs-on: ${{ matrix.runner }}
     container:
-      image: https://dc.local.gha-runners.nvidia.com/nvidia/cuda:12.6.2-devel-ubuntu22.04
+      image: nvidia/cuda:12.6.2-devel-ubuntu22.04
       options: --gpus all
     steps:
       - name: Checkout Repository
@@ -80,7 +78,7 @@ jobs:
     if: github.repository == 'NVIDIA/tilus' && needs.check-changes.outputs.should_run_docs == 'true'
     runs-on: linux-amd64-gpu-l4-latest-1
     container:
-      image: https://dc.local.gha-runners.nvidia.com/nvidia/cuda:12.6.2-devel-ubuntu22.04
+      image: nvidia/cuda:12.6.2-devel-ubuntu22.04
       options: --gpus all
     steps:
       - name: Checkout Repository
@@ -102,7 +100,7 @@ jobs:
     if: github.repository == 'NVIDIA/tilus' && needs.check-changes.outputs.should_run_examples == 'true'
     runs-on: linux-amd64-gpu-l4-latest-1
     container:
-      image: https://dc.local.gha-runners.nvidia.com/nvidia/cuda:12.6.2-devel-ubuntu22.04
+      image: cuda:12.6.2-devel-ubuntu22.04
       options: --gpus all
     steps:
       - name: Checkout Repository
