--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -100,7 +100,7 @@ jobs:
     if: github.repository == 'NVIDIA/tilus' && needs.check-changes.outputs.should_run_examples == 'true'
     runs-on: linux-amd64-gpu-l4-latest-1
     container:
-      image: cuda:12.6.2-devel-ubuntu22.04
+      image: nvidia/cuda:12.6.2-devel-ubuntu22.04
       options: --gpus all
     steps:
       - name: Checkout Repository
