--- a/.github/workflows/deploy-docs.yaml
+++ b/.github/workflows/deploy-docs.yaml
@@ -18,7 +18,7 @@ jobs:
     continue-on-error: true
     runs-on: linux-amd64-gpu-l4-latest-1
     container:
-      image: cuda:12.6.2-devel-ubuntu22.04
+      image: nvidia/cuda:12.6.2-devel-ubuntu22.04
       options: --gpus all
     steps:
       - name: Checkout Repository
