[Package] Rename to under @NVIDIA organization (#15)
Update the old url from hidet-org to NVIDIA.
Co-authored-by: Yaoyao Ding <dingyaoyao.cs@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,8 +52,8 @@ dev = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/hidet-org/tilus"
-Documentation = "https://hidet.org"
+Homepage = "https://github.com/NVIDIA/tilus"
+Documentation = "https://nvidia.github.io/tilus"
 
 [tool.setuptools_scm]
 
