--- a/.github/workflows/format-and-lint.yaml
+++ b/.github/workflows/format-and-lint.yaml
@@ -6,7 +6,7 @@ on:
       - "pull-request/[0-9]+"
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.sha }}
+  group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
