--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ dev = [
     "types-tqdm",
     "pandas",
     "nvidia-ml-py",  # for locking GPU clocks
+    "einops",
 
     # for documentation
     "jinja2",
