add flash-attn as dependency
Signed-off-by: Yaoyao Ding <dingyaoyao.cs@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,7 +40,10 @@ dev = [
     "types-tqdm",
     "pandas",
     "nvidia-ml-py",  # for locking GPU clocks
+
+    # for examples
     "einops",
+    "flash-attn",
 
     # for documentation
     "jinja2",
