use --no-build-isolation to install flash-attn
Signed-off-by: Yaoyao Ding <dingyaoyao.cs@gmail.com>

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -114,7 +114,7 @@ jobs:
 
       - name: Install example dependencies
         run: |
-          pip install -r examples/requirements.txt
+          pip install flash-attn --no-build-isolation 
 
       - name: Run examples
         run: |
