[Example] Add the attention example with kv-cache (#21)
This PR adds an example: attention with kv cache. The example implements
an attention operator with the following parameters:
```python
    q: torch.Tensor,  # fp16[batch_size, seqlen, num_heads, head_size]
    k_cache: torch.Tensor,  # fp16[num_blocks, page_block_size, num_heads_kv, head_size]
    v_cache: torch.Tensor,  # fp16[num_blocks, page_block_size, num_heads_kv, head_size]
    cache_seqlens: torch.Tensor,  # int32[batch_size]
    block_table: torch.Tensor,  # int32[batch_size, max_num_blocks_per_seq]
```
which is a simplified version of `flash_attn_with_kvcache` in
[Dao-AILab/flash-attention](https://github.com/Dao-AILab/flash-attention/blob/main/flash_attn/flash_attn_interface.py#L1464)

Performance on RTX 4090:
```
   batch_size  seqlen_q  sum_seqlen_kv  num_heads  head_size  num_heads_kv        name  latency (ms)      tflops
0           1      4096           4096         32        128             8  flash-attn      1.130496  121.574026
1           1      4096           4096         32        128             8       tilus      0.975872  140.837073
2           1      1024           4096         32        128             8  flash-attn      0.467968   73.423267
3           1      1024           4096         32        128             8       tilus      0.437248   78.581809
4          16         1          65536         32        128             8  flash-attn      0.351680    1.526589
5          16         1          65536         32        128             8       tilus      0.445440    1.205260
```

We might need to implement split-k optimization for decode stage (e.g.,
seqlen_q = 1).

Minor changes needed by this example:
1. Allow TensorElement in grid analyzer.

---------

Signed-off-by: Yaoyao Ding <dingyaoyao.cs@gmail.com>

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -112,6 +112,11 @@ jobs:
         with:
           python-version: '3.10'
 
+      - name: Install example dependencies
+        run: |
+          pip install wheel
+          pip install flash-attn --no-build-isolation 
+
       - name: Run examples
         run: |
           bash .github/workflows/scripts/run-examples.sh
