--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -20,6 +20,8 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Check for changes in test-relevant directories
         id: changed-tests
@@ -29,7 +31,7 @@ jobs:
             tests/**
             python/**
             pyproject.toml
-          base_sha: 'main'
+          base_sha: 'origin/main'
 
       - name: Check for changes in examples
         id: changed-examples
@@ -39,7 +41,7 @@ jobs:
             python/**
             examples/**
             pyproject.toml
-          base_sha: 'main'
+          base_sha: 'origin/main'
         
       - name: Check for changes in docs
         id: changed-docs
@@ -49,7 +51,7 @@ jobs:
             python/**
             docs/**
             pyproject.toml
-          base_sha: 'main'
+          base_sha: 'origin/main'
 
   tests:
     needs: check-changes
@@ -66,6 +68,8 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Setup and Install Tilus
         id: setup-and-install
@@ -86,6 +90,8 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Setup and Install Tilus
         id: setup-and-install
@@ -108,6 +114,8 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Setup and Install Tilus
         id: setup-and-install
