--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "explorer.excludeGitIgnore": false,
     "python.analysis.diagnosticSeverityOverrides": {
-        "reportInvalidTypeForm": "none" // Tilus rely on variables as type hints
+        "reportInvalidTypeForm": "none" // Tilus rely on variables as type hints, for vscode to work properly
+    },
+    "cursorpyright.analysis.diagnosticSeverityOverrides": {
+        "reportInvalidTypeForm": "none" // Tilus rely on variables as type hints, for cursor to work properly
     }
 }
