--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ classifiers = [
     "Programming Language :: Python :: 3",
 ]
 dependencies = [
+    "apache-tvm-ffi",
     "hidet==0.6.1",
     "torch",
     "tabulate",
