--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,8 @@
         "reportInvalidTypeForm": "none" // Tilus rely on variables as type hints, for cursor to work properly
     },
     "python.testing.pytestArgs": [
-        "tests"
+        "tests", 
+        "-s",
     ],
     "python.testing.unittestEnabled": false,
     "python.testing.pytestEnabled": true
