--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,6 +64,9 @@ Documentation = "https://nvidia.github.io/tilus"
 [tool.setuptools.package-dir]
 "" = "python"
 
+[tool.setuptools.package-data]
+"tilus.extensions.hidet" = ["include/**/*.h"]
+
 [tool.ruff]
 line-length = 120
 
