--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,11 @@
     },
     "cursorpyright.analysis.diagnosticSeverityOverrides": {
         "reportInvalidTypeForm": "none" // Tilus rely on variables as type hints, for cursor to work properly
-    }
+    },
+    "python.testing.pytestArgs": [
+        "tests", 
+        "-s",
+    ],
+    "python.testing.unittestEnabled": false,
+    "python.testing.pytestEnabled": true
 }
