use torch==2.8 for examples since flash-attn does not have prebuilt wheel for 2.9
Signed-off-by: Yaoyao Ding <dingyaoyao.cs@gmail.com>

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -126,7 +126,7 @@ jobs:
       - name: Install example dependencies
         run: |
           pip install wheel
-          pip install flash-attn --no-build-isolation 
+          pip install torch==2.8 flash-attn --no-build-isolation 
 
       - name: Run examples
         run: |
