[Instruction] Add `any` and `all` reduce instructions (#57)
This PR adds the following instructions:
- `all`
- `any`
which checks whether a boolean tensor has all/any elements to be True.

It also adds `.item()` method to register tensor to convert a tensor
with one element (i.e., zero-rank tensor, a tensor with shape like [1],
[1, 1], etc) to a scalar.

---------

Signed-off-by: Yaoyao Ding <dingyaoyao.cs@gmail.com>

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -126,6 +126,7 @@ jobs:
       - name: Install example dependencies
         run: |
           pip install wheel
+          pip install torch==2.8 # since flash-attn only has pre-built wheels for torch<=2.8, todo: update this when flash-attn supports torch>=2.9
           pip install flash-attn --no-build-isolation 
 
       - name: Run examples
