--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ dev = [
     "ruff==0.11.0",
     "mypy==1.15.0",
     "pytest",
+    "pre-commit",
     "types-tabulate",
     "types-tqdm",
     "pandas",
