--- a/.github/workflows/format-and-lint.yaml
+++ b/.github/workflows/format-and-lint.yaml
@@ -38,8 +38,8 @@ jobs:
 
       - name: Run pre-commit checks
         run: |
-          echo "Running all pre-commit hooks..."
-          pre-commit run --all-files --show-diff-on-failure
+          echo "Running all pre-commit hooks (skipping commit signature check)..."
+          SKIP=check-commit-signature pre-commit run --all-files --show-diff-on-failure
 
       - name: Check for uncommitted changes
         run: |
