--- a/.github/workflows/format-and-lint.yaml
+++ b/.github/workflows/format-and-lint.yaml
@@ -2,7 +2,7 @@ name: Format & Lint
 
 on:
   push:
-    branches: 
+    branches:
       - "pull-request/[0-9]+"
 
 concurrency:
@@ -23,7 +23,33 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Check format and lint
+      - name: Cache pre-commit environments
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pre-commit
+          key: pre-commit-${{ runner.os }}-${{ hashFiles('.pre-commit-config.yaml') }}
+          restore-keys: |
+            pre-commit-${{ runner.os }}-
+
+      - name: Install and setup pre-commit
         run: |
-          pip list | grep -E 'ruff|mypy'  # show ruff and mypy versions
-          bash .github/workflows/scripts/check-format-and-lint.sh
+          echo "Pre-commit version: $(pre-commit --version)"
+          pre-commit install-hooks
+
+      - name: Run pre-commit checks
+        run: |
+          echo "Running all pre-commit hooks (skipping commit signature check)..."
+          SKIP=check-commit-signature pre-commit run --all-files --show-diff-on-failure
+
+      - name: Check for uncommitted changes
+        run: |
+          if [[ -n $(git status --porcelain) ]]; then
+            echo "❌ Files were modified by pre-commit hooks. Please run 'pre-commit run --all-files' locally and commit the changes."
+            echo "Modified files:"
+            git status --porcelain
+            echo "Showing diff:"
+            git diff
+            exit 1
+          else
+            echo "✅ No files were modified - all checks passed!"
+          fi
